--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -5,14 +5,13 @@
 }
 
 article {
-
     flex: 70%;
 }
 
 article > ul {
     list-style-type: none;
     padding: 0;
-    margin: 0 10px 0 0;
+    margin: 0 10px 10px 0;
 }
 
 article > ul > li {
@@ -29,6 +28,7 @@ article > ul > li:last-child{
 aside {
     flex: 30%;
     border: 1px solid #c0c0c0;
+    margin: 0 10px 10px 10px;
 }
 
 @media all and (max-width: 640px) {
