--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,25 +2,22 @@
 <html xmlns:th="http://www.thymeleaf.org"
       th:replace="~{master :: layout(${page.getID()},${page.getFullName()},~{::main})}">>
 <main>
-    <article>
-        <ul th:each="post : ${posts}">
-            <div class="card flex-md-row mb-4 shadow-sm h-md-250">
-                <div class="card-body d-flex flex-column align-items-start">
-                    <strong class="d-inline-block mb-2 text-primary" th:text="${post.getCategory().getName()}">Tag</strong>
-                    <h3 class="mb-0">
-                        <a class="text-dark" href="#" th:text="${post.getTitle()}">Featured post</a>
-                    </h3>
-                    <div class="mb-1 text-muted">
-                        <p>Written by <a href="#" th:text="${post.getUser().getUserName()}">Unknown</a> on
-                            <time th:text="${post.getDate().toString()}">12 April 2012</time>
-                        </p>
-                    </div>
-                    <p class="card-text mb-auto" th:text="${post.getText()}">This is a wider card with supporting text
-                        below as a natural lead-in to additional content.</p>
-                    <a th:href="@{'/blog/'+${post.getId()}}">Continue reading</a>
-                </div>
+    <div class="card flex-md-row mb-4 shadow-sm h-md-250" th:each="post : ${posts}">
+        <article class="card-body d-flex flex-column align-items-start">
+            <strong class="d-inline-block mb-2 text-primary" th:text="${post.getCategory().getName()}">Tag</strong>
+            <h3 class="mb-0">
+                <a class="text-dark" href="#" th:text="${post.getTitle()}">Featured post</a>
+            </h3>
+            <div class="mb-1 text-muted">
+                <p>Written by <a href="#" th:text="${post.getUser().getUserName()}">Unknown</a> on
+                    <time th:text="${post.getDate().toString()}">12 April 2012</time>
+                </p>
             </div>
-        </ul>
-    </article>
+            <p class="card-text mb-auto" th:text="${post.getText()}">This is a wider card with supporting text
+                below as a natural lead-in to additional content.</p>
+            <a th:href="@{'/blog/'+${post.getId()}}">Continue reading</a>
+        </article>
+    </div>
+
 </main>
 </html>
