--- a/src/main/resources/templates/master.html
+++ b/src/main/resources/templates/master.html
@@ -9,17 +9,17 @@
     <title>Blog di Enrico</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main2.css"/>
-    <link rel="stylesheet" href="css/home.css"/>
-
+    <link rel="stylesheet" th:href="@{/css/main.css}"/>
+    <link rel="stylesheet" th:href="@{/css/index.css}"/>
 </head>
 <body>
 <header>
+    <h2 class="display-2" style="text-align: center; font-family: 'Times New Roman',serif;padding:0.4em 0">Il blog di Enrico</h2>
 </header>
-<nav th:replace="utils :: nav(${id})"></nav>
-<div th:replace="utils :: title(${fullName})"></div>
-<main class="container" th:include="${content}">
 
+<nav th:replace="utils :: nav(${id})"></nav>
+<h1 class="display-4" th:text="${fullName}" style="padding: 0.8em 0; text-align: center"></h1>
+<main class="container" th:include="${content}">
 
 
     <aside><p>Sidebar</p></aside>
