--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -6,12 +6,31 @@
     <form th:object="${blogPost}"
           th:action="(${page.getID()} == 1) ? @{'/blog/new'}: @{'/blog/'+${blogPost.getId()}+'/edit'}"
           method="post">
-        <div class="form-group row">
-            <label for="inputUsername" class="col-sm-2 col-form-label">Username</label>
-            <div class="col-sm-10">
+        <div class="form-row">
+
+            <div class="form-group col-md-6">
+                <label for="inputUsername" class="col-form-label">Title</label>
                 <input type="text" class="form-control" id="inputUsername" th:field="*{title}"
                        th:value="${blogPost.getTitle()}">
             </div>
+            <div class="form-group col-md-3">
+                <label for="author" class="col-form-label">Author</label>
+                <select class="form-control" id="author" th:field="*{user}" th:selected="${blogPost.getUser()}">
+                    <option th:each="user : ${users}" th:value="${user.getUserName()}"
+                            th:text="${user.getUserName()}">
+                        Default select
+                    </option>
+                </select>
+            </div>
+            <div class="form-group col-md-3">
+                <label for="category" class="col-form-label">Category</label>
+                <select class="form-control" id="category" th:field="*{category}">
+                    <option th:each="category : ${categories}" th:value="${category.getName()}"
+                            th:text="${category.getName()}">Default select
+                    </option>
+                </select>
+            </div>
+
         </div>
         <div class="form-group row">
             <label for="exampleFormControlTextarea1" class="col-sm-2 col-form-label">Text</label>
@@ -21,26 +40,10 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="author" class="col-sm-2 col-form-label">Author</label>
-            <div class="col-sm-10">
-                <select class="form-control" id="author" th:field="*{user}" th:selected="${blogPost.getUser()}">
-                    <option th:each="user : ${users}" th:value="${user.getUserName()}" th:text="${user.getUserName()}">
-                        Default select
-                    </option>
-                </select>
-            </div>
+
         </div>
 
-        <div class="form-group row">
-            <label for="category" class="col-sm-2 col-form-label">Category</label>
-            <div class="col-sm-10">
-                <select class="form-control" id="category" th:field="*{category}">
-                    <option th:each="category : ${categories}" th:value="${category.getName()}"
-                            th:text="${category.getName()}">Default select
-                    </option>
-                </select>
-            </div>
-        </div>
+
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </main>
