--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -6,16 +6,14 @@ body {
 
 }
 
-nav {
+nav.bg-light {
     border-top: 1px solid;
-    border-bottom: 1px solid;
+    border-color: #c5c5c5;
+    background-color: white !important;
+    /*border-bottom: 1px solid;*/
 }
 
-
-
 .nav-item.active {
-    border: 1px solid;
-    background-color: white;
 }
 
 footer {
