--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{master :: layout(${page.getID()},${page.getFullName()},~{::main})}">>
+      th:replace="~{master :: layout(${page.getID()},${page.getFullName()},~{::main})}">
 <main id="new-bp">
 
     <form th:object="${blogPost}"
@@ -13,6 +13,7 @@
                 <input type="text" class="form-control" id="inputUsername" th:field="*{title}"
                        th:value="${blogPost.getTitle()}">
             </div>
+            <!--
             <div class="form-group col-md-3">
                 <label for="author" class="col-form-label">Author</label>
                 <select class="form-control" id="author" th:field="*{user}" th:selected="${blogPost.getUser()}">
@@ -22,6 +23,7 @@
                     </option>
                 </select>
             </div>
+            -->
             <div class="form-group col-md-3">
                 <label for="category" class="col-form-label">Category</label>
                 <select class="form-control" id="category" th:field="*{category}">
