--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -28,3 +28,19 @@ footer > p {
     color: black;
     margin: 0;
 }
+
+.page-wrap {
+    min-height: 100%;
+    /* equal to footer height */
+    margin-bottom: -60px;
+}
+.page-wrap:after {
+    content: "";
+    display: block;
+}
+footer, .page-wrap:after {
+    height: 60px;
+}
+footer {
+    background: orange;
+}
