--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
     <title>Login</title>
 </head>
 <body>
-<main>
+<main class="container">
     <form class="px-4 py-3" method="post">
         <div class="form-group">
             <label for="username">Username</label>
