--- a/src/main/resources/templates/master.html
+++ b/src/main/resources/templates/master.html
@@ -14,51 +14,53 @@
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
     <link rel="stylesheet" th:href="@{/css/index.css}"/>
 </head>
-<body>
-<div class="container">
-    <header class="blog-header py-3">
-        <div class="row flex-nowrap justify-content-between align-items-center">
-            <div class="col-4 pt-1">
-                <a class="text-muted" href="#">Subscribe</a>
-            </div>
-            <div class="col-4 text-center">
-                <a class="blog-header-logo text-dark" href="#"
-                   style="font-family: 'Crete Round', Times New Roman, serif;font-size: 2.25rem">Blog di Enrico</a>
-            </div>
-            <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="text-muted" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                         class="mx-3">
-                        <circle cx="10.5" cy="10.5" r="7.5"></circle>
-                        <line x1="21" y1="21" x2="15.8" y2="15.8"></line>
-                    </svg>
-                </a>
-                <a sec:authorize="!isAuthenticated()" th:href="@{/login}" class="btn btn-sm btn-outline-secondary">Sign
-                    up</a>
-                <span sec:authorize="isAuthenticated()">
+<body style="height: 100%">
+<div class="page-wrap">
+    <div class="container">
+        <header class="blog-header py-3">
+            <div class="row flex-nowrap justify-content-between align-items-center">
+                <div class="col-4 pt-1">
+                    <a class="text-muted" href="#">Subscribe</a>
+                </div>
+                <div class="col-4 text-center">
+                    <a class="blog-header-logo text-dark" href="#"
+                       style="font-family: 'Crete Round', Times New Roman, serif;font-size: 2.25rem">Blog di Enrico</a>
+                </div>
+                <div class="col-4 d-flex justify-content-end align-items-center">
+                    <a class="text-muted" href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                             class="mx-3">
+                            <circle cx="10.5" cy="10.5" r="7.5"></circle>
+                            <line x1="21" y1="21" x2="15.8" y2="15.8"></line>
+                        </svg>
+                    </a>
+                    <a sec:authorize="!isAuthenticated()" th:href="@{/login}" class="btn btn-sm btn-outline-secondary">Sign
+                        up</a>
+                    <span sec:authorize="isAuthenticated()">
                     <a class="text-muted">
                     Signed in as:&nbsp;</a>
                     <a sec:authentication="name">username</a>
                     <a th:href="@{/logout}" class="btn btn-sm btn-outline-secondary text-muted"
-                                       style="margin-left: 10px">Logout</a>
+                       style="margin-left: 10px">Logout</a>
 
                 </span>
+                </div>
             </div>
-        </div>
-    </header>
-</div>
-<nav th:replace="utils :: nav(${id})"></nav>
-<div class="container">
+        </header>
+    </div>
+    <nav th:replace="utils :: nav(${id})"></nav>
+
     <!--
     <h1 class="display-4" th:text="${fullName}" style="padding: 0.8em 0; text-align: center"></h1>
     -->
-    <main th:include="${content}">
+    <main th:replace="${content}">
 
 
         <aside><p>Sidebar</p></aside>
 
     </main>
+
 </div>
 <footer th:replace="utils :: footer"></footer>
 </body>
