--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,7 +6,7 @@
     <title>Login</title>
 </head>
 <body>
-<main>
+<main class="container">
     <form class="px-4 py-3" th:object="${user}" method="post">
         <div class="form-group">
             <label for="username">Username</label>
