--- a/src/main/resources/templates/master.html
+++ b/src/main/resources/templates/master.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
     <link rel="stylesheet" th:href="@{/css/index.css}"/>
+    <link rel="stylesheet" th:if="${id}==4 or ${id}==5" th:href="@{/css/login.css}">
 </head>
 <body style="height: 100%">
 <div class="page-wrap">
