--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <main class="container">
+    <h1 class="px-4 display-4" th:text="${page.getFullName()}"></h1>
     <form class="px-4 py-3" method="post">
         <div class="form-group">
             <label for="username">Username</label>
@@ -19,7 +20,7 @@
         <button type="submit" class="btn btn-primary">Sign in</button>
     </form>
     <div class="dropdown-divider"></div>
-    <a class="dropdown-item" th:href="@{/register}">New around here? Sign up</a>
+    <a class="dropdown-item" th:href="@{/register}">New around here? Register!</a>
 </main>
 </body>
 </html>
