--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,14 +7,17 @@
 </head>
 <body>
 <main class="container">
+    <h1 class="px-4 display-4" th:text="${page.getFullName()}"></h1>
     <form class="px-4 py-3" th:object="${user}" method="post">
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Username" th:field="*{userName}">
+            <input type="text" class="form-control" id="username" name="username" placeholder="Username"
+                   th:field="*{userName}">
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Password" th:field="*{password}">
+            <input type="password" class="form-control" id="password" name="password" placeholder="Password"
+                   th:field="*{password}">
         </div>
         <button type="submit" class="btn btn-primary">Register</button>
     </form>
