--- a/src/main/resources/templates/utils.html
+++ b/src/main/resources/templates/utils.html
@@ -14,7 +14,8 @@
                     <a class="nav-link" th:href="(${currentPage} == 'home') ? '#' : @{/}">Home</a>
                 </li>
                 <li th:class="(${currentPage} == 1) ? 'nav-item active' : 'nav-item'">
-                    <a class="nav-link" th:href="(${currentPage} == 'new-post') ? '#' : @{/blog/new}">New BlogPost</a>
+                    <p th:if="(${currentPage} == 1)" class="nav-link">New BlogPost</p>
+                    <a th:if="(${currentPage} == 0)" class="nav-link" th:href="@{/blog/new}">New BlogPost</a>
                 </li>
             </ul>
         </div>
