--- a/src/main/resources/templates/master.html
+++ b/src/main/resources/templates/master.html
@@ -64,5 +64,5 @@
 
 </div>
 <footer th:replace="utils :: footer"></footer>
+<script type="text/javascript" th:if="${id}==5" th:src="@{/js/register.js}"></script>
 </body>
-</html>
