--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,15 +11,29 @@
     <form class="px-4 py-3" th:object="${user}" method="post">
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Username"
+            <input type="text" class="form-control is-valid" id="username" name="username" placeholder="Username"
                    th:field="*{userName}">
+            <div class="invalid-feedback">
+                Le password inserite non coincidono
+            </div>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Password"
-                   th:field="*{password}">
+            <div class="input-group">
+                <input type="password" class="form-control is-invalid" id="password" name="password" placeholder="Password"
+                       th:field="*{password}">
+                <input type="password" class="form-control is-invalid" id="passwordCheck" aria-label="Last name"
+                       placeholder="Re-type password" style="border-radius: 0 4px 4px 0;">
+                <div class="invalid-feedback">
+                    Le password inserite non coincidono
+                </div>
+            </div>
         </div>
-        <button type="submit" class="btn btn-primary">Register</button>
+
+        <button type="submit" class="btn btn-primary" disabled>Register</button>
     </form>
     <div class="dropdown-divider"></div>
 </main>
