--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       th:replace="~{master :: layout(${page.getID()},${page.getFullName()},~{::main})}">>
 <main id="details" class="container">
     <article>
         <h1 th:text="${blogPost.getTitle()}"></h1>
         <p th:text="${blogPost.getText()}"></p>
         <a role="button" class="btn btn-warning" th:href="@{'/blog/'+${blogPost.getId()}+'/edit'}">Edit</a>
-        <a role="button" class="btn btn-danger" th:href="@{'/blog/'+${blogPost.getId()}+'/delete'}">Delete</a>
+        <a role="button" class="btn btn-danger" sec:authorize="hasRole('ADMIN')" th:href="@{'/blog/'+${blogPost.getId()}+'/delete'}">Delete</a>
     </article>
 </main>
 </html>
