--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -7,12 +7,20 @@
           th:object="${blogPost}"
           th:action="(${page.getID()} == 1) ? @{'/blog/new'}: @{'/blog/'+${blogPost.getId()}+'/edit'}"
           method="post">
-        <div class="form-row">
+        <div class="row">
 
-            <div class="form-group col-md-6">
+            <div class="form-group col-lg-3 col-md-4 col-sm-12">
+
                 <label for="inputUsername" class="col-form-label">Title</label>
                 <input type="text" class="form-control" id="inputUsername" th:field="*{title}"
                        th:value="${blogPost.getTitle()}">
+                <label for="category" class="col-form-label">Category</label>
+                <select class="form-control" id="category" th:field="*{category}">
+                    <option th:each="category : ${categories}" th:value="${category.getName()}"
+                            th:text="${category.getName()}">Default select
+                    </option>
+                </select>
+                <button type="submit" class="btn btn-primary" style="margin-top: 1em">Submit</button>
             </div>
             <!--
             <div class="form-group col-md-3">
@@ -25,29 +33,17 @@
                 </select>
             </div>
             -->
-            <div class="form-group col-md-3">
-                <label for="category" class="col-form-label">Category</label>
-                <select class="form-control" id="category" th:field="*{category}">
-                    <option th:each="category : ${categories}" th:value="${category.getName()}"
-                            th:text="${category.getName()}">Default select
-                    </option>
-                </select>
-            </div>
+            <div class="form-group col-lg-9 col-md-8 col-sm-12">
+                <label for="exampleFormControlTextarea1" class="col-form-label">Text</label>
 
-        </div>
-        <div class="form-group row">
-            <label for="exampleFormControlTextarea1" class="col-sm-2 col-form-label">Text</label>
-            <div class="col-sm-10">
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" th:field="*{text}"
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="8" th:field="*{text}"
                           th:value="${blogPost.getText()}"></textarea>
+
             </div>
-        </div>
-        <div class="form-group row">
 
         </div>
 
 
-        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </main>
 </html>
