--- a/src/main/resources/templates/master.html
+++ b/src/main/resources/templates/master.html
@@ -21,7 +21,8 @@
         <header class="blog-header">
             <div class="row flex-nowrap justify-content-between align-items-center">
                 <div class="col-4 pt-1">
-                    <a class="text-muted" href="#">Subscribe</a>
+                    <a th:if="(${id} == 1)" class="nav-link text-muted new-post active">Create a new post</a>
+                    <a th:if="(${id} == 0)" class="nav-link text-muted new-post" th:href="@{/blog/new}">Create a new post</a>
                 </div>
                 <div class="col-4 text-center">
                     <a class="blog-header-logo text-dark" href="#"
