--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       th:replace="~{master :: layout(${page.getID()},${page.getFullName()},~{::main})}">
 <main id="new-bp" class="container">
-
+    <h1 class="px-4 display-4" th:text="${page.getFullName()}"></h1>
     <form class="px-4 py-3"
           th:object="${blogPost}"
           th:action="(${page.getID()} == 1) ? @{'/blog/new'}: @{'/blog/'+${blogPost.getId()}+'/edit'}"
